--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <h3 class="font-semibold leading-tight text-center uppercase text-xl">Merge PDF</h3>
-    <form action="" enctype="multipart/form-data" class="mt-5">
+    <form action="" enctype="multipart/form-data" class="mt-5" method="post">
         {{ form.csrf_token }}
         <div id="field-wrapper">
             {% for field in form.documents %}
@@ -16,7 +16,7 @@
                 </div>
             {% endfor %}
         </div>
-        <button class="text-blue-600 block mb-6 p-2 hover:text-blue-700" id="addFiles">
+        <button class="text-primary block mb-6 p-2 hover:text-blue-700" id="addFiles">
             <svg class="w-4 inline -mt-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd"
                       d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z"
@@ -24,7 +24,8 @@
             </svg>
             More files
         </button>
-        <button type="submit" class="block bg-blue-600  font-bold text-white py-2 px-3 rounded hover:bg-blue-500">Merge
+        <button type="submit"
+                class="block bg-blue-600  font-bold text-white py-2 px-3 rounded bg-secondary hover:bg-secDark">Merge
             Files
         </button>
     </form>
